fix: resolve frontend typescript errors and path aliases for deployment

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,13 +20,12 @@
                 "./src/*"
             ],
             "@shared/*": [
-                "../shared/*"
+                "./src/shared/*"
             ]
         },
         "baseUrl": "."
     },
     "include": [
-        "src",
-        "../shared"
+        "src"
     ]
 }
